tests/ui/cfg/tuple-variant.stderr
error: `cfg` attributes on the field of tuple variants are not supported
  --> $DIR/tuple-variant.rs:13:9
   |
13 |         #[cfg(not(any()))] //~ ERROR `cfg` attributes on the field of tuple variants are not supported
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

